WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149693
[EFL][Gtk] Try to fix the build after
r190379
.
https://bugs.webkit.org/show_bug.cgi?id=149693
Summary
[EFL][Gtk] Try to fix the build after r190379.
Hunseop Jeong
Reported
2015-09-30 19:47:25 PDT
https://build.webkit.org/builders/EFL%20Linux%2064-bit%20Release%20WK2/builds/24658/steps/compile-webkit/logs/stdio
../../Source/WebCore/Modules/indexeddb/server/MemoryIDBBackingStore.h:38:97: error: ‘IDBDatabaseIdentifier’ does not name a type friend std::unique_ptr<MemoryIDBBackingStore> std::make_unique<MemoryIDBBackingStore>(const IDBDatabaseIdentifier&); ^ ../../Source/WTF/wtf/StdLibExtras.h: In instantiation of ‘typename std::_Unique_if<T>::_Single_object std::make_unique(Args&& ...) [with T = WebCore::IDBServer::MemoryIDBBackingStore; Args = {const WebCore::IDBDatabaseIdentifier&}; typename std::_Unique_if<T>::_Single_object = std::unique_ptr<WebCore::IDBServer::MemoryIDBBackingStore>]’: ../../Source/WebCore/Modules/indexeddb/server/MemoryIDBBackingStore.cpp:36:62: required from here ../../Source/WebCore/Modules/indexeddb/server/MemoryIDBBackingStore.cpp:39:1: error: ‘WebCore::IDBServer::MemoryIDBBackingStore::MemoryIDBBackingStore(const WebCore::IDBDatabaseIdentifier&)’ is private MemoryIDBBackingStore::MemoryIDBBackingStore(const IDBDatabaseIdentifier& identifier) ^ In file included from ../../Source/WTF/wtf/FastMalloc.h:26:0, from ../../Source/WebCore/config.h:75, from ../../Source/WebCore/Modules/indexeddb/server/MemoryIDBBackingStore.cpp:26: ../../Source/WTF/wtf/StdLibExtras.h:319:60: error: within this context return unique_ptr<T>(new T(std::forward<Args>(args)...)); ^ ^ EFL, Gtk port build failed after
r190379
.
Attachments
Patch
(1.35 KB, patch)
2015-09-30 19:51 PDT
,
Hunseop Jeong
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hunseop Jeong
Comment 1
2015-09-30 19:51:12 PDT
Created
attachment 262225
[details]
Patch
Hunseop Jeong
Comment 2
2015-09-30 19:54:53 PDT
Compiler didn't find the 'IDBDatabaseIdentifier'. So I add the 'Webcore::' to find the 'IDBDatabaseIdentifier'.
WebKit Commit Bot
Comment 3
2015-09-30 20:56:03 PDT
Comment on
attachment 262225
[details]
Patch Clearing flags on attachment: 262225 Committed
r190384
: <
http://trac.webkit.org/changeset/190384
>
WebKit Commit Bot
Comment 4
2015-09-30 20:56:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug