[EFL][Gtk] Try to fix the build after r190379. https://bugs.webkit.org/show_bug.cgi?id=149693

Patch by Hunseop Jeong <hs85.jeong@samsung.com> on 2015-09-30
Reviewed by Gyuyoung Kim.

* Modules/indexeddb/server/MemoryIDBBackingStore.h:

Canonical link: https://commits.webkit.org/167800@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190384 268f45cc-cd09-0410-ab3c-d52691b4dbfc